--- a/TPN.css
+++ b/TPN.css
@@ -66,27 +66,28 @@ section {
     overflow: hidden;
 }
 
-#img {
+.img {
     width: 30%;
     height: 100%;
     background-color: antiquewhite;
 
 }
 
-#my-img{
+
+.side-img{
     width: 100%;
     height: 100%;
     object-fit: cover;
 }
   
-#article {
+.article {
     width: 70%;
     height: 100%;
     display: flex;
     align-items: center;
-    font-size: 3rem;
     flex-direction: column;
     color: black;
+    padding: 0% 5% 0% 5%;
 }
   
   
@@ -94,13 +95,19 @@ section {
     width: 70vw;
     height: 60vh;
     margin-bottom: 20%;
+    display: flex;
+    overflow: hidden;
 }
 
 #schoolweb {
     width: 70vw;
     height: 10vh;
+    display: flex;
+    overflow: hidden;
+    align-items: center;
+    justify-content: center;
+    font-size: 1.5rem
 }
-
 .navbtn:hover {
     transition: transform 0.5s ease;
     transform:scale(1.25);
@@ -117,6 +124,15 @@ section {
 .txt{
     font-size: 1.5rem;
     color: black;
+    text-align: justify;
+}
+
+.title {
+    font-size: 2.5rem;
+}
+
+.header {
+    font-size: 3rem;
 }
 
 #location {
