--- a/Debsirin.css
+++ b/Debsirin.css
@@ -12,6 +12,7 @@ nav {
     position: fixed;
     top: 0;
     width: 100%;
+    justify-content: center;
 }   
 .navbar a {
     float: left;
@@ -21,6 +22,7 @@ nav {
     padding: 14px 16px;
     text-decoration: none;
     font-size: 25px;
+    
   }
 section {
     display: flex;
@@ -42,7 +44,6 @@ section {
     margin: 0 5rem 0 5rem;
     text-decoration: none;
     font-size: 1.5rem;  
-    
     
 }
 
